--- a/Hermes/Dockerfile
+++ b/Hermes/Dockerfile
@@ -4,21 +4,22 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER app
 WORKDIR /app
 EXPOSE 8080
+EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Mnemosyne/Mnemosyne.csproj", "Mnemosyne/"]
-RUN dotnet restore "./Mnemosyne/Mnemosyne.csproj"
+COPY ["Hermes/Hermes.csproj", "Hermes/"]
+RUN dotnet restore "./Hermes/Hermes.csproj"
 COPY . .
-WORKDIR "/src/Mnemosyne"
-RUN dotnet build "./Mnemosyne.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/Hermes"
+RUN dotnet build "./Hermes.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Mnemosyne.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./Hermes.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Mnemosyne.dll"]
+ENTRYPOINT ["dotnet", "Hermes.dll"]
