--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,30 @@
-version: '3.4'
-
 services:
+  exchangemocker:
+    image: ${DOCKER_REGISTRY-}exchangemocker
+    build:
+        context: .
+        dockerfile: ExchangeMocker/Dockerfile
+    ports:
+        - "8080:80"
+
+  hermes:
+    image: ${DOCKER_REGISTRY-}hermes
+    build:
+        context: .
+        dockerfile: Hermes/Dockerfile
+    ports:
+        - "7000:80" 
+
   mnemosyne:
     image: ${DOCKER_REGISTRY-}mnemosyne
     build:
       context: .
       dockerfile: Mnemosyne/Dockerfile
+    ports:
+      - "7777:80"
     depends_on:
       - db
-      
+
   db:
     image: postgres:latest
     environment:
